actions: fix(3rd clang): fix typo
a simple example:

In 1.sh line 3:
if [ $i=1 && $u=2 ]
         ^-- SC2107 (error): Instead of [ a && b ], use [ a ] && [ b ].

--- a/action.yml
+++ b/action.yml
@@ -182,7 +182,7 @@ runs:
          echo "::endgroup::"
          fi
 
-         if [ ${{ inputs.aosp-clang }} = false && ${{ inputs.android-ndk }} = false ]; then
+         if [ ${{ inputs.aosp-clang }} = false ] && [ ${{ inputs.android-ndk }} = false ]; then
              echo "::group:: Downloading 3rd clang"
              export OTHER_CLANG_URL=${{ inputs.other-clang-url }}
              if [[ "$OTHER_CLANG_URL" == *'.tar.gz' ]]; then
