ci: feat(yaml-check): Initialize tests/index.js
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
        node-version: 20
 
     - name: Imstall yamllint
-      run: npm i -g yaml-lint
+      run: cd tests && yarn install --frozon-lockfile
 
     - name: Check yaml
-      run: yamllint action.yml
+      run: cd tests && node index.js
 
   ci-test:
     strategy:
