actions: feat(aosp-clang): support download aosp clang from main branch
ref:
https://github.com/ayefuwa/kernel_build_action/actions/runs/8030492854/job/21937932058

``` bash logcat
  mkdir: created directory '/home/runner/clang'

      02/24 12:23:21 [NOTICE] Downloading 1 item(s)

  02/24 12:23:21 [ERROR] CUID#7 - Download aborted.
  URI=https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android14-release/clang-r510928.tar.gz
    Exception: [AbstractCommand.cc:351] errorCode=22
    URI=https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android14-release/clang-r510928.tar.gz

[HttpSkipResponseCommand.cc:239] errorCode=22 The response status is not
successful. status=400

    02/24 12:23:21 [NOTICE] Download GID#ad18e8e883b1d5aa not complete:
    /home/runner/work/kernel_build_action/kernel_build_action/aosp-clang.tar.gz

        Download Results:
         gid   |stat|avg speed  |path/URI
    ======+====+===========+=======================================================
     ad18e8|ERR |
     0B/s|/home/runner/work/kernel_build_action/kernel_build_action/aosp-clang.tar.gz

  Status Legend:
    (ERR):error occurred.

aria2 will resume download if the transfer is
restarted.
	  If there are any errors, then see the log file. See '-l'
	  option in help/man page for details.
	    Error: Process completed with exit code 22.
```
this commit may fix it.

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -238,7 +238,11 @@ runs:
              echo "::group:: Downloading AOSP clang"
              if [ ${{ inputs.aosp-gcc }} = true ]; then
                  mkdir $HOME/clang -p -v
-                 aria2c -o aosp-clang.tar.gz https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android${{ inputs.android-version }}-release/clang-${{ inputs.aosp-clang-version }}.tar.gz
+                 if [[ ${{ inputs.android-version }} =~ ^[0-9]$|^([1-9][0-9])$ ]]; then
+                     aria2c -o aosp-clang.tar.gz https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android${{ inputs.android-version }}-release/clang-${{ inputs.aosp-clang-version }}.tar.gz
+                 else
+                     aria2c -o aosp-clang.tar.gz https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/main/clang-${{ inputs.aosp-clang-version }}.tar.gz
+                 fi
                  tar -C $HOME/clang -zxf aosp-clang.tar.gz
              else
                  echo "Please enable aosp-gcc."
