tests: feat: add Total time
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       with:
        node-version: 20
 
-    - name: Imstall yamllint
+    - name: Imstall dependence
       run: cd tests && yarn install
 
     - name: Check yaml
