action: [Add] Clone kernel repository from GitHub
Added command to clone the kernel repository from GitHub with the specified username/repository combination.

Example:
- Username/Repository: AcmeUI-Devices/android_kernel_xiaomi_cas

name: CI

on:
  workflow_dispatch:

jobs:
  build-kernel:
    name: Build Kernel
    runs-on: ubuntu-20.04
    steps:
      - name: Build
        uses: dabao1955/kernel_build_action@main
        with:

          kernel-url: AcmeUI-Devices/android_kernel_xiaomi_cas
          branch: taffy

Signed-off-by: akari <akariondev@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -257,7 +257,7 @@ runs:
          fi
 
          echo "::group:: Pulling Kernel Source"
-         git clone --recursive ${{ inputs.kernel-url }} -b "${{ inputs.branch }}" --depth=${{ inputs.depth }} kernel/${{ inputs.kernel-dir }}
+         git clone --recursive https://github.com/${{ inputs.kernel-url }} -b "${{ inputs.branch }}" --depth=${{ inputs.depth }} kernel/${{ inputs.kernel-dir }}
          echo "::endgroup::"
 
          if [ ${{ inputs.vendor }} = true ]; then
