--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -15,6 +15,8 @@ body:
           required: true
         - label: I use the official action instead of someone else's
           required: true
+        - label: I have read the FAQ section in README.md
+          required: true
         
   - type: textarea
     id: config
