workflow/main: Add parameter git-provider
Signed-off-by: akari <akariondev@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@ jobs:
     - name: Test CI
       uses: dabao1955/kernel_build_action@main
       with:
-          kernel-url: https://github.com/AcmeUI-Devices/android_kernel_xiaomi_cas
+          kernel-url: AcmeUI-Devices/android_kernel_xiaomi_cas
+          git-provider: github
           kernel-dir: msm-4.19
           branch: taffy
           config: cas_defconfig
