actions: fix: fix path

--- a/action.yml
+++ b/action.yml
@@ -188,7 +188,7 @@ runs:
                  mkdir -p -v $HOME/gcc-32
                  aria2c -o gcc-arm.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
                  tar -C $HOME/gcc-32 -zxf gcc-arm.tar.gz
-             elif [ ${{ inputs.aosp-clang }} = true ] || [ ${{ inputs.android-ndk }} = true ]; then
+             elif [ ${{ inputs.aosp-clang }} = true ] && [ ${{ inputs.android-ndk }} = true ]; then
                  echo "Error: The two options aosp-clang and android-ndk will conflict with each other, please turn off one." && exit 15
              else
                  git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/ --depth=1 -b android${{ inputs.android-version }}-release $HOME/gcc-64
