--- a/action.yml
+++ b/action.yml
@@ -276,7 +276,7 @@ runs:
          echo "::endgroup::"
 
          if [ ${{ inputs.vendor }} = true ]; then
-             echo "::group:: <<<Pulling Kernel vendor source"
+             echo "::group:: Pulling Kernel vendor source"
              git clone ${{ inputs.vendor-url }} --depth=${{ inputs.depth }} kernel/${{ inputs.vendor-dir }}
              test -d kernel/${{ inputs.vendor-dir }}/vendor && cp -rv kernel/${{ inputs.vendor-dir }}/vendor kernel
              test -d kernel/${{ inputs.vendor-dir }}/vendor && cp -rv kernel/${{ inputs.vendor-dir }}/vendor ./
@@ -297,7 +297,7 @@ runs:
                 if grep -q CONFIG_KSU=y "arch/${{ inputs.arch }}/configs/${{ inputs.config }}" ; then
                     sed -i 's/CONFIG_KSU=y/CONFIG_KSU=m/g' "arch/${{ inputs.arch }}/configs/${{ inputs.config }}"
                 else
-                    echo "CONFIG_KSU_MODULE=y" >> arch/${{ inputs.arch }}/configs/${{ inputs.config }}
+                    echo "CONFIG_KSU" >> arch/${{ inputs.arch }}/configs/${{ inputs.config }}
                 fi
             else
                 if grep -q "CONFIG_KPROBES=y" "arch/${{ inputs.arch }}/configs/${{ inputs.config }}" ; then
