actions: fix: Fix boot.img format judgment logic
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -218,7 +218,7 @@ runs:
              echo "::group:: Downloading Android NDK"
              if [ ${{ inputs.aosp-gcc }} = false ]; then
                  export NDKVER=$(echo "${{ inputs.android-ndk-version }}" | sed 's/r\([0-9]\+\)[a-zA-Z]\?/\1/g')
-                 if [ "$NDKVER" < 23 ]; then
+                 if [ "$NDKVER" < "23" ]; then
                      aria2c -o android-ndk.zip https://dl.google.com/android/repository/android-ndk-${{ inputs.android-ndk-version }}-linux.zip
                      unzip -d $HOME android-ndk.zip
                  else
@@ -324,7 +324,7 @@ runs:
                  git apply add-wifi-injection.patch
                  aria2c https://github.com/tomxi1997/kali-nethunter_patches/raw/main/fix-ath9k-naming-conflict.patch
                  git apply fix-ath9k-naming-conflict.patch
-                 if [ "$SUBLEVEL" ＜ 19 ]; then
+                 if [ "$SUBLEVEL" ＜ "19" ]; then
                      aria2c https://github.com/tomxi1997/kali-nethunter_patches/raw/main/add-wifi-injection-4.14.patch
                      git apply add-wifi-injection-4.14.patch
                  fi
@@ -425,18 +425,14 @@ runs:
             aria2c ${{ inputs.bootimg-url }} -o boot.img
             nohup ./magiskboot unpack boot.img
             export FMT=$(cat nohup.out | grep "KERNEL_FMT" | awk '{gsub("\\[", "", $2); gsub("\\]", "", $2); print $2}')
-            if [ "$FMT" = "gzip" ] ;then
-                if find -name "*dtb" ; then
-                    if ls ../out/arch/${{ inputs.arch }}/boot/Image.*-dtb ; then
-                        cp -v ../out/arch/${{ inputs.arch }}/boot/Image.*-dtb kernel -v
-                    else
-                        cp -v ../out/arch/${{ inputs.arch }}/boot/Image.*-dtb kernel -v
-                    fi
-                else
-                    cp -v ../out/arch/${{ inputs.arch }}/boot/Image.* kernel -v
-                fi
             elif [ "$FMT" = "raw" ] ; then
-                cp -v ../out/arch/${{ inputs.arch }}/boot/Image kernel -v
+                cp -v ../out/arch/${{ inputs.arch }}/boot/Image kernel
+            else
+                if find -name "*dtb" ; then
+                    cp -v ../out/arch/${{ inputs.arch }}/boot/Image.*-dtb kernel
+                else
+                    cp -v ../out/arch/${{ inputs.arch }}/boot/Image.* kernel
+                fi
             fi
             ./magiskboot repack boot.img
             rm -rf boot.img
